Added Handler for Books, Lists and GoogleBooks and added tests for them. + some minor changes in swagger (added responses for books and googlebooks) PRAK25-15
