# internal/types/operations/create_book_parameters.go
@@ -37,7 +37,7 @@ type CreateBookParams struct {
 	  Required: true
 	  In: body
 	*/
-	Body *types.ListBooksItems
+	Body *types.BookInMyDb
 }
 
 // BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
@@ -51,7 +51,7 @@ func (o *CreateBookParams) BindRequest(r *http.Request, route *middleware.Matche
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body types.ListBooksItems
+		var body types.BookInMyDb
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			if err == io.EOF {
 				res = append(res, errors.Required("body", "body", ""))
