# internal/types/operations/save_book_to_list_parameters.go
@@ -38,7 +38,7 @@ type SaveBookToListParams struct {
 	  Required: true
 	  In: body
 	*/
-	BookToAddToList *types.ListBooksItems
+	BookToAddToList *types.BookInMyDb
 	/*List ID to to get the list to add books to.
 	  Required: true
 	  In: path
@@ -57,7 +57,7 @@ func (o *SaveBookToListParams) BindRequest(r *http.Request, route *middleware.Ma
 
 	if runtime.HasBody(r) {
 		defer r.Body.Close()
-		var body types.ListBooksItems
+		var body types.BookInMyDb
 		if err := route.Consumer.Consume(r.Body, &body); err != nil {
 			if err == io.EOF {
 				res = append(res, errors.Required("bookToAddToList", "body", ""))
